Языко-зависимая фильтрация символов (LanguageScope: BSL/OS/BOTH)
- Новый enum LanguageScope с методами matches(FileType)/merge.
- PlatformTypesProvider.getLanguageScope() default BOTH;
  BuiltinPlatformTypesProvider -> BSL, BuiltinOScriptPlatformTypesProvider -> OS.
- TypeRegistry: typeScopes map, resolve(name, FileType),
  registerPack/registerUserType/registerAsGlobalProperty со scope.
  ConfigurationType всегда BSL.
- GlobalScopeProvider: scope-maps для функций/классов/keywords/vars/
  globalProperties. Фильтрованные overload'ы findGlobal/findFunction/
  getFunctions/getClasses/getKeywords/getPlatformVariableNames/
  findGlobalPropertyType/getGlobalPropertyNames/findPlatformVariableType.
  В BSL-файлах библиотечные сущности скрыты полностью.
- CompletionProvider/SignatureHelpProvider/TypeService/
  ExpressionTypeInferencer вызывают filtered overload'ы с FileType
  из документа.
- OScript-тесты переключены на .os-URI через TestUtils.FAKE_OSCRIPT_DOCUMENT_URI.

Известное ограничение: member-level фильтрация по скоупу не реализована;
при пересечении имён (Массив/Структура/КодировкаТекста) методы из
обоих ресурсов видны независимо от типа файла.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>